# segpc_yolov7

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml  segpc_yolov7.launch
include/segpc_yolov7/: segment_pc_node.h
launch/: segpc_yolov7.launch
src/: segment_pc_node.cpp
